--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arifurs portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pushster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="Orange-color">Potatos</span> World!</h1>
+            <h3>Being vorta and encrease taste</h3>
+            <p>Wild potato species can be found throughout the Americas, from Canada to southern Chile.[3] The potato
+                was
+                originally believed to have been domesticated by Native Americans independently in multiple
+                locations,[4]
+                but later genetic traced a single origin, in the area of present-day southern Peru and extreme
+                northwestern
+                Bolivia. Potatoes were domesticated there approximately 7,000–10,000 years ago, from a species in the
+                Solanum brevicaule complex.[5][6][7] In the Andes region of South America, where the species is
+                indigenous,
+                some close relatives of the potato are cultivated.</p>
+            <a class="link-button" target="blank" href="https://github.com/6epotato">Hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
