--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+
+            <h2>
+                Dream Big
+            </h2>
+            <h2>Become a developer</h2>
+            <p>
+                Nowadays becoming a software developer is undoubtedly one of the best career choices someone can make,
+                not only because of the great job opportunities available but also because of the huge rewards in terms
+                of personal satisfaction, self development and creative expression
+            </p>
+            <a class="link-button" target="blank" href="https://github.com/6epotato">Download Resume</a>
+        </div>
+    </section>
 
 </body>
 
