--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="Orange-color">Potatos</span> World!</h1>
@@ -34,7 +34,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -52,6 +52,45 @@
             <a class="link-button" target="blank" href="https://github.com/6epotato">Download Resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>
+            Experiences
+        </h1>
+        <div class="flexible-container">
+            <div id="fullstack" class="experience-item">
+                <h2>Full-Stack Web Developer</h2>
+                <h3 class="Orange-color">2020-present | pro level developer</h3>
+                <p>
+                    A Full Stack Developer is someone who works with the Back End — or server side — of the application
+                    as
+                    well as the Front End, or client side. ... Some of the responsibilities of a Full Stack Developer
+                    include: Helping with the design and development of software. Testing and debugging software to keep
+                    it
+                    optimized.
+                </p>
+            </div>
+            <div id="web-developer" class="experience-item">
+                <h2>
+                    Baby Web developer
+                </h2>
+                <h3 class="Orange-color">
+                    2022-2024 | Hero Learner
+                </h3>
+                <p>
+                    A computer programmer, sometimes called a software developer, a programmer or more recently a coder,
+                    is
+                    a person who creates computer software. The term computer programmer can refer to a specialist in
+                    one
+                    area of computers or to a generalist who writes code for many kinds of software
+                </p>
+            </div>
+
+
+        </div>
+    </section>
+    <footer>
+        <p>Eitai ekta alur jibon</p>
+    </footer>
 
 </body>
 
